--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   	<meta name="author" content="Brad Traversy">
     <title>AshokA Web Deisgn | Welcome</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="favicon.png">
+    <link rel="icon" href="ad.png">
   </head>
   <body>
     <header>
